[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Grade.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.1187, 65.0441 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.30869, 1.32133 )

[node name="Door" type="StaticBody2D"]
position = Vector2( 830.781, -64.9114 )
script = ExtResource( 2 )
min_rank = 1
max_rank = 9

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="BlockCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 60, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
